php/include/pdf_oxide.h

typedef struct DocumentEditor DocumentEditor;
typedef struct FfiAnnotationList FfiAnnotationList;
typedef struct FfiFontList FfiFontList;
typedef struct FfiImageList FfiImageList;
typedef struct FfiRenderedImage FfiRenderedImage;
typedef struct FfiRenderedImage FfiRenderedImage;
typedef struct FfiSearchResults FfiSearchResults;
typedef struct PdfDocument PdfDocument;
void free_string(char *ptr);
void free_bytes(uint8_t *ptr);
PdfDocument *pdf_document_open(const char *path, int32_t *error_code);
void pdf_document_free(PdfDocument *handle);
int32_t pdf_document_get_page_count(PdfDocument *handle, int32_t *error_code);
void pdf_document_get_version(const PdfDocument *handle, uint8_t *major, uint8_t *minor);
bool pdf_document_has_structure_tree(PdfDocument *handle);
char *pdf_document_extract_text(PdfDocument *handle, int32_t page_index, int32_t *error_code);
char *pdf_document_to_markdown(PdfDocument *handle, int32_t page_index, int32_t *error_code);
char *pdf_document_to_html(PdfDocument *handle, int32_t page_index, int32_t *error_code);
char *pdf_document_to_plain_text(PdfDocument *handle, int32_t page_index, int32_t *error_code);
char *pdf_document_to_markdown_all(PdfDocument *handle, int32_t *error_code);
DocumentEditor *document_editor_open(const char *path,
                                     int32_t *error_code);
void document_editor_free(DocumentEditor *handle);
bool document_editor_is_modified(const DocumentEditor *handle);
char *document_editor_get_source_path(const DocumentEditor *handle, int32_t *error_code);
void document_editor_get_version(const DocumentEditor *handle, uint8_t *major, uint8_t *minor);
int32_t document_editor_get_page_count(DocumentEditor *handle, int32_t *error_code);
int32_t document_editor_save(DocumentEditor *handle, const char *path, int32_t *error_code);
FfiSearchResults *pdf_document_search_page(PdfDocument *handle,
                                           int32_t page_index,
                                           const char *search_term,
                                           bool case_sensitive,
                                           int32_t *error_code);
FfiSearchResults *pdf_document_search_all(PdfDocument *handle,
                                          const char *search_term,
                                          bool case_sensitive,
                                          int32_t *error_code);
int32_t pdf_oxide_search_result_count(const FfiSearchResults *results);
char *pdf_oxide_search_result_get_text(const FfiSearchResults *results,
                                       int32_t index,
                                       int32_t *error_code);
int32_t pdf_oxide_search_result_get_page(const FfiSearchResults *results,
                                         int32_t index,
                                         int32_t *error_code);
void pdf_oxide_search_result_get_bbox(const FfiSearchResults *results,
                                      int32_t index,
                                      float *x,
                                      float *y,
                                      float *width,
                                      float *height,
                                      int32_t *error_code);
void pdf_oxide_search_result_free(FfiSearchResults *handle);
FfiFontList *pdf_document_get_embedded_fonts(PdfDocument *handle,
                                             int32_t page_index,
                                             int32_t *error_code);
int32_t pdf_oxide_font_count(const FfiFontList *fonts);
char *pdf_oxide_font_get_name(const FfiFontList *fonts, int32_t index, int32_t *error_code);
int32_t pdf_oxide_font_is_embedded(const FfiFontList *fonts, int32_t index, int32_t *error_code);
float pdf_oxide_font_get_size(const FfiFontList *_fonts, int32_t _index, int32_t *error_code);
void pdf_oxide_font_list_free(FfiFontList *handle);
FfiImageList *pdf_document_get_embedded_images(PdfDocument *handle,
                                               int32_t page_index,
                                               int32_t *error_code);
int32_t pdf_oxide_image_count(const FfiImageList *images);
int32_t pdf_oxide_image_get_width(const FfiImageList *images, int32_t index, int32_t *error_code);
int32_t pdf_oxide_image_get_height(const FfiImageList *images, int32_t index, int32_t *error_code);
int32_t pdf_oxide_image_get_bits_per_component(const FfiImageList *images,
                                               int32_t index,
                                               int32_t *error_code);
void pdf_oxide_image_list_free(FfiImageList *handle);
int32_t pdf_oxide_annotation_count(const FfiAnnotationList *annotations);
char *pdf_oxide_annotation_get_type(const FfiAnnotationList *annotations,
                                    int32_t index,
                                    int32_t *error_code);
FfiRenderedImage *pdf_render_page_region(PdfDocument *doc,
                                         int32_t page_index,
                                         float crop_x,
                                         float crop_y,
                                         float crop_width,
                                         float crop_height,
                                         int32_t format,
                                         int32_t *error_code);
FfiRenderedImage *pdf_render_page_zoom(PdfDocument *doc,
                                       int32_t page_index,
                                       float zoom,
                                       int32_t format,
                                       int32_t *error_code);
FfiRenderedImage *pdf_render_page_fit(PdfDocument *doc,
                                      int32_t page_index,
                                      int32_t w,
                                      int32_t h,
                                      int32_t format,
                                      int32_t *error_code);
FfiRenderedImage *pdf_render_page_thumbnail(PdfDocument *doc,
                                            int32_t page_index,
                                            int32_t _size,
                                            int32_t format,
                                            int32_t *error_code);
void pdf_rendered_image_free(FfiRenderedImage *handle);
bool pdf_form_import_from_file(const void *_document, const char *_filename, int32_t *error_code);
bool pdf_document_is_encrypted(const PdfDocument *handle);
void pdf_ocr_engine_free(void *engine);