ruby/lib/pdf_oxide/ffi/bindings.rb

# frozen_string_literal: true

require 'ffi'
require_relative 'library'

module PdfOxide
  module FFI
    # All FFI function bindings for PDF Oxide library
    # Total: 315+ functions covering all PDF operations
    module Bindings
      extend ::FFI::Library

      # Load native library
      begin
        ffi_lib(Library.library_path)
      rescue LoadError => e
        raise ::PdfOxide::InternalError.new(
          "Failed to load PDF Oxide native library: #{e.message}. " \
          "Make sure libpdf_oxide is installed."
        )
      end

      # ============================================================
      # ERROR HANDLING & MEMORY MANAGEMENT
      # ============================================================

      # ============================================================
      # UTILITY FUNCTIONS (16 total)
      # ============================================================

      # REMOVED phantom (no upstream symbol): :alloc_string (1 line)
      attach_function :free_string, [:pointer], :void
      attach_function :free_bytes, [:pointer], :void

      # Document Editor Operations (13)
      attach_function :document_editor_open, [:string, :pointer], :pointer
      attach_function :document_editor_free, [:pointer], :void
      attach_function :document_editor_save, [:pointer, :string, :pointer], :bool
      attach_function :document_editor_get_page_count, [:pointer, :pointer], :int32
      attach_function :document_editor_get_source_path, [:pointer, :pointer], :string
      attach_function :document_editor_get_title, [:pointer, :pointer], :string
      attach_function :document_editor_get_author, [:pointer, :pointer], :string
      attach_function :document_editor_get_subject, [:pointer, :pointer], :string
      attach_function :document_editor_get_version, [:pointer, :pointer], :string
      attach_function :document_editor_set_title, [:pointer, :string, :pointer], :bool
      attach_function :document_editor_set_author, [:pointer, :string, :pointer], :bool
      attach_function :document_editor_set_subject, [:pointer, :string, :pointer], :bool
      attach_function :document_editor_is_modified, [:pointer], :bool

      # ============================================================
      # DOCUMENT OPERATIONS
      # ============================================================

      # Core document operations
      attach_function :pdf_document_open, [:string, :pointer], :pointer
      attach_function :pdf_document_free, [:pointer], :void
      attach_function :pdf_document_get_page_count, [:pointer, :pointer], :int32
      attach_function :pdf_document_is_encrypted, [:pointer, :pointer], :bool
      # REMOVED phantom (no upstream symbol): :pdf_document_requires_password (1 line)

      # Document metadata
      attach_function :pdf_document_get_version, [:pointer, :pointer], :string
      attach_function :pdf_document_has_structure_tree, [:pointer], :bool

      # ============================================================
      # TEXT EXTRACTION
      # ============================================================

      attach_function :pdf_document_extract_text, [:pointer, :int32, :pointer], :string
      attach_function :pdf_document_to_markdown, [:pointer, :int32, :pointer], :string
      attach_function :pdf_document_to_markdown_all, [:pointer, :pointer], :string
      attach_function :pdf_document_to_html, [:pointer, :int32, :pointer], :string
      attach_function :pdf_document_to_plain_text, [:pointer, :int32, :pointer], :string

      # ============================================================
      # SEARCH OPERATIONS (15 functions)
      # ============================================================

      attach_function :pdf_document_search_page, [:pointer, :string, :int32, :bool, :pointer], :pointer
      attach_function :pdf_document_search_all, [:pointer, :string, :bool, :pointer], :pointer
      attach_function :pdf_oxide_search_result_count, [:pointer], :int32
      attach_function :pdf_oxide_search_result_get_page, [:pointer, :int32], :int32
      attach_function :pdf_oxide_search_result_get_text, [:pointer, :int32], :string
      attach_function :pdf_oxide_search_result_get_bbox, [:pointer, :int32, :pointer], :void
      attach_function :pdf_oxide_search_result_free, [:pointer], :void

      # ============================================================
      # PAGE OPERATIONS (30 functions)
      # ============================================================

      # ============================================================
      # RENDERING OPERATIONS (25 functions)
      # ============================================================

      # REMOVED phantom (no upstream symbol): :pdf_render_page_to_file (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_render_page_to_bytes (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_render_page_range (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_render_document (1 line)
      attach_function :pdf_render_page_fit, [:pointer, :int32, :int32, :int32, :int32, :pointer], :pointer
      attach_function :pdf_render_page_zoom, [:pointer, :int32, :float, :int32, :pointer], :pointer
      attach_function :pdf_render_page_region, [:pointer, :int32, :float, :float, :float, :float, :int32, :pointer], :pointer
      attach_function :pdf_render_page_thumbnail, [:pointer, :int32, :int32, :pointer], :pointer
      # REMOVED phantom (no upstream symbol): :pdf_rendered_image_width (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_rendered_image_height (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_rendered_image_size (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_rendered_image_data (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_rendered_image_to_base64 (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_rendered_image_save (1 line)
      attach_function :pdf_rendered_image_free, [:pointer], :void

      # ============================================================
      # ANNOTATION OPERATIONS (20 functions)
      # ============================================================
      # REMOVED phantom (no upstream symbol): :pdf_document_get_annotations (1 line)
      attach_function :pdf_oxide_annotation_count, [:pointer], :int32
      attach_function :pdf_oxide_annotation_get_type, [:pointer, :int32], :int32

      # ============================================================
      # FORM OPERATIONS (20 functions)
      # ============================================================

      # Form field operations
      # REMOVED phantom (no upstream symbol): :pdf_form_export_to_fdf (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_form_export_to_xfdf (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_form_export_to_json (1 line)
      attach_function :pdf_form_import_from_file, [:pointer, :string, :pointer], :bool
      # REMOVED phantom (no upstream symbol): :pdf_form_reset_all_fields (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_form_field_find_by_name (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_form_field_set_value_by_name_string (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_form_field_set_value_by_name_boolean (1 line)

      # ============================================================
      # FONT OPERATIONS (15 functions)
      # ============================================================

      attach_function :pdf_document_get_embedded_fonts, [:pointer, :int32, :pointer], :pointer
      attach_function :pdf_oxide_font_count, [:pointer], :int32
      attach_function :pdf_oxide_font_get_name, [:pointer, :int32], :string
      attach_function :pdf_oxide_font_get_size, [:pointer, :int32], :float
      attach_function :pdf_oxide_font_is_embedded, [:pointer, :int32], :bool
      attach_function :pdf_oxide_font_list_free, [:pointer], :void

      # ============================================================
      # IMAGE OPERATIONS (20 functions)
      # ============================================================

      attach_function :pdf_document_get_embedded_images, [:pointer, :int32, :pointer], :pointer
      attach_function :pdf_oxide_image_count, [:pointer], :int32
      attach_function :pdf_oxide_image_get_width, [:pointer, :int32], :int32
      attach_function :pdf_oxide_image_get_height, [:pointer, :int32], :int32
      attach_function :pdf_oxide_image_get_bits_per_component, [:pointer, :int32], :int32
      attach_function :pdf_oxide_image_list_free, [:pointer], :void

      # ============================================================
      # OUTLINE/BOOKMARK OPERATIONS (4 functions)
      # ============================================================
      # REMOVED phantom (no upstream symbol): :pdf_document_get_outline_count (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_outline_title (1 line)

      # ============================================================
      # LAYER OPERATIONS (3 functions)
      # ============================================================
      # REMOVED phantom (no upstream symbol): :pdf_document_get_layer_count (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_layer_name (1 line)

      # ============================================================
      # METADATA OPERATIONS (12 functions)
      # ============================================================

      # REMOVED phantom (no upstream symbol): :pdf_document_get_title (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_author (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_subject (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_keywords (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_creator (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_producer (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_creation_date (1 line)

      # ============================================================
      # OCR OPERATIONS (15 functions)
      # ============================================================

      attach_function :pdf_ocr_engine_free, [:pointer], :void

      # ============================================================
      # DIGITAL SIGNATURE OPERATIONS (15 functions)
      # ============================================================

      # Phase 1 signing functions
      # REMOVED phantom (no upstream symbol): :pdf_credentials_from_pkcs12 (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_credentials_from_pem (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_credentials_free (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_sign_data (8 lines)
      #
      #
      #
      #
      #
      #
      #
      # REMOVED phantom (no upstream symbol): :pdf_document_sign_file (7 lines)
      #
      #
      #
      #
      #
      #
      # REMOVED phantom (no upstream symbol): :pdf_embed_ltv_data (7 lines)
      #
      #
      #
      #
      #
      #
      # REMOVED phantom (no upstream symbol): :pdf_document_save_signed (5 lines)
      #
      #
      #
      #
      # REMOVED phantom (no upstream symbol): :pdf_signed_bytes_free (1 line)

      # ============================================================
      # BARCODE OPERATIONS (6 functions)
      # ============================================================

      # ============================================================
      # COMPLIANCE OPERATIONS (20 functions)
      # ============================================================

      # ============================================================
      # CACHE OPERATIONS (5 functions)
      # ============================================================
